<resources>
    <string name="app_name">Macaron Diary</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">Home Fragment</string>
    <string name="diary_fragment_label">Diary Fragment</string>
    <string name="shop_fragment_label">Shop Fragment</string>
    <string name="setting_fragment_label">Setting Fragment</string>

    <string name="fragment_btn_label1">Home</string>
    <string name="fragment_btn_label2">Diary</string>
    <string name="fragment_btn_label3">MacaronShop</string>
    <string name="fragment_btn_label4">Setting</string>

    <string name="recycler_view">String</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Home fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="baseURL">http://keydo.ml:8000/macarondiary/</string>
    <string name="testbaseURL">http://jsonplaceholder.typicode.com/</string>

    <string name="title_activity_writediary">WritediaryActivity</string>
    <string name="title_activity_shop">ShopActivity</string>

    <string name="diaryactivity_ethint_title">4글자로 맛을 표현해보세요</string>
    <string name="diaryactivity_ethint_shopname">마카롱집 이름</string>
    <string name="diaryactivity_ethint_content">오늘의 마카롱은?</string>
    <string name="diaryactivity_btntext_confirm">저장</string>
    <string name="diaryactivity_btntext_cancel">취소</string>

    <string name="admob_app_id">ca-app-pub-2421954146060515~1650070624</string>
    <string name="banner_ad_unit_id">ca-app-pub-2421954146060515/9959148947</string>
    <string name="banner_ad_unit_id_for_test">ca-app-pub-3940256099942544/6300978111</string>

    <string name="shopmain">서비스 준비중입니다</string>

    <string name="file_provider" translatable="false">com.example.macarondiary.fileprovider</string>

    <string name="pick_single">사진을 선택해주세요</string>

    <plurals name="pick_multi">
        <item quantity="one">1개 선택됨</item>
        <item quantity="other">%1$d개 선택됨</item>
    </plurals>
    <plurals name="pick_multi_more">
        <item quantity="one">1개 이상 선택해주세요</item>
        <item quantity="other">%1$d개 이상 선택해주세요</item>
    </plurals>
    <string name="pick_multi_limit">%1$d개 이상의 사진을 올릴 수 없습니다.</string>

    <string name="licensekey">
        MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAkQGsuQUEjNH3Ugcm+QMPl+EyyNviT7YreVt4cD2+5fgGqjGykvdWIayIMW11zyZ/HbJwCIoRFTo90A2bJbQnGKa7KwiZzy1bIOyyL8/lNiwhHAtUYHxG02+DoigbH718BsTl8ZVogHRyddenDow+l5SkKsIGgmX65TT6vWDTdjS0duOHXwSfceUDNiDpWJb+VaZqNtWvghDakGv7YuXQK1bfYzQL0g1H5qsk4UdHrJ+ax7qQCvfbPZ+8rjN9Ih1XN1FwEdYenr4TUVG2EFLZGz9kVoDHGo/BVZG9Xbcnn+Oak0t6Q5UIf6/4ish5/Dz/kCY8H9RY6ayVuLibGd9f0QIDAQAB
    </string>
    <string name="btn_noads">광고 제거하기</string>
    <string name="btn_donate">개발자 후원하기</string>
</resources>